Fix typos in mobile-top and main-nav.html files to fix templates bug

--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,6 @@
 {% load static %}
+{% include 'includes/mobile-top-header.html' %}
+{% include 'includes/main-nav.html' %}
 
 <!doctype html>
 <html lang="en">
