Update base.html to include footer wi th mailchimp, facebook and privacy policy and contact us

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -2,5 +2,11 @@
 {% load static %}
 
 {% block content %}
-    <h1 class="display-4 text-success">It works!!!</h1>
+<div class="container-fluid bg-black text-white text-center py-5" style="min-height: 100vh;">
+    <div class="container">
+      <h1 class="display-4">Built for Battle. Crafted for Victory.</h1>
+      <p class="lead">Explore the finest hurleys and accessories for every player.</p>
+      <a href="hurley-and-helmet-hero.jpg" class="btn btn-primary btn-lg mt-4">SHOP FOR HURLEYS</a>
+    </div>
+  </div>
 {% endblock %}
