--- a/templates/base.html
+++ b/templates/base.html
@@ -1,55 +1,41 @@
 {% load static %}
-{% include 'includes/mobile-top-header.html' %}
-{% include 'includes/main-nav.html' %}
-
 <!doctype html>
 <html lang="en">
   <head>
-
-    {% block meta %}
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% endblock %}
-
-    {% block extra_meta %}
-    {% endblock %}
-
-    {% block corecss %}
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    {% endblock %}
-
-    {% block extra_css %}
-    {% endblock %}
-
-    {% block corejs %}
-        <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <script src="https://kit.fontawesome.com/213d853def.js" crossorigin="anonymous"></script>
-
-    {% endblock %}
-
-    {% block extra_js %}
-    {% endblock %}
-
-    <title>GAA Store {% block extra_title %}{% endblock %}</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <title>GAA Store - {% block extra_title %}{% endblock %}</title>
+    {% block extra_css %}{% endblock %}
   </head>
   <body>
-    <header class="container-fluid fixed-top"></header>
+    {% include 'includes/mobile-top-header.html' %}
+    {% include 'includes/main-nav.html' %}
 
-    {% if messages %}
-        <div class="message-container"></div>
-    {% endif %}
-  {% block page_header %} 
-  {% endblock %}
-  {% block content %}
-  {% endblock %}
-  {% block postloadjs %}
-  {% endblock %}
+    <main>
+      {% block content %}{% endblock %}
+    </main>
 
-    </body>
+    <footer class="bg-dark text-white py-4">
+      <div class="container text-center">
+        <form action="https://mailchimp.com" method="POST" class="mb-3">
+          <label for="email" class="form-label">Sign up for updates:</label>
+          <input type="email" id="email" name="email" class="form-control mb-2" placeholder="Enter your email" required>
+          <button type="submit" class="btn btn-primary">Subscribe</button>
+        </form>
+        <div class="d-flex justify-content-center">
+          <a href="https://facebook.com" class="text-white mx-2">Facebook</a>
+          <a href="/privacy-policy/" class="text-white mx-2">Privacy Policy</a>
+          <a href="/contact-us/" class="text-white mx-2">Contact Us</a>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    {% block extra_js %}{% endblock %}
+  </body>
 </html>
