--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -6,7 +6,7 @@
     <div class="container">
       <h1 class="display-4">Built for Battle. Crafted for Victory.</h1>
       <p class="lead">Explore the finest hurleys and accessories for every player.</p>
-      <a href="hurley-and-helmet-hero.jpg" class="btn btn-primary btn-lg mt-4">SHOP FOR HURLEYS</a>
+      <a href="/media/hurley-and-helmet-hero.jpg" class="btn btn-primary btn-lg mt-4">SHOP FOR HURLEYS</a>
     </div>
   </div>
 {% endblock %}
