--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block content %}
 <div class="container mt-5">
@@ -14,14 +15,14 @@
         <!-- Bambú Hurleys -->
         <div class="col-md-4 mb-4">
             <a href="{% url 'product_list' %}?category=ash-hurleys">
-                <img src="{% static 'images/bambu-hurleys.png' %}" alt="Bambú Hurleys" class="img-fluid rounded">
+                <img src="{% static 'images/bambu_hurley.png' %}" alt="Bambú Hurleys" class="img-fluid rounded">
                 <h3 class="mt-3">Bambú Hurleys</h3>
             </a>
         </div>
         <!-- Goalie Hurleys -->
         <div class="col-md-4 mb-4">
             <a href="{% url 'product_list' %}?category=ash-hurleys">
-                <img src="{% static 'images/goalie-hurleys.png' %}" alt="Goalie Hurleys" class="img-fluid rounded">
+                <img src="{% static 'images/goalie_hurleys.png' %}" alt="Goalie Hurleys" class="img-fluid rounded">
                 <h3 class="mt-3">Goalie Hurleys</h3>
             </a>
         </div>
