Fix hurling imgages not consistent, add new hurling.img

--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -8,7 +8,7 @@
         <!-- Ash Hurleys -->
         <div class="col-md-4 mb-4">
             <a href="{% url 'product_list' %}?category=ash-hurleys">
-                <img src="{% static 'images/ash_hurleys.png' %}" alt="Ash Hurleys" class="img-fluid rounded">
+                <img src="{% static 'images/ash_hurley.png' %}" alt="Ash Hurleys" class="img-fluid rounded">
                 <h3 class="mt-3">Ash Hurleys</h3>
             </a>
         </div>
