--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -8,6 +8,7 @@
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"><a class="nav-link" href="/hurleys/">Hurleys</a></li>
           <li class="nav-item"><a class="nav-link" href="/accessories/">Accessories</a></li>
+          <li class="nav-item"><a class="nav-link" href="/how-to-measure/">Measure</a></li>
           <li class="nav-item"><a class="nav-link" href="/faq/">FAQ</a></li>
           <li class="nav-item"><a class="nav-link" href="/accounts/login/">Log In</a></li>
         </ul>
