--- a/home/templates/home/how_to_measure.html
+++ b/home/templates/home/how_to_measure.html
@@ -30,10 +30,23 @@
     <ol>
         <li>Wear your shoes or boots</li>
         <li>Player stands nice and relaxed with their hands down by their sides.</li>
-        <li>Measure in inches the distance from the ground to their wrist in inches.</li>
-        <li>This meausrement in inches is the correct size hurley to choose.</li>
+        <li>Measure using a peice of string or tape in the distance from the ground to their wrist.</li>
+        <li>This measurement in inches is the correct size hurley to choose. If you only have a centimetre measure use our handy calculator below:</li>
+        <div class="calculator mt-5">
+            <h3 class="text-center">Centimeters to Inches Calculator</h3>
+            <p class="text-center">Enter your measurement in centimeters to convert it to inches:</p>
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <form id="cm-to-inches-form" class="text-center">
+                        <input type="number" id="cm-input" class="form-control mb-3" placeholder="Enter centimeters" required>
+                        <button type="button" id="convert-btn" class="btn btn-primary">Convert</button>
+                    </form>
+                    <p id="result" class="mt-3 text-center"></p>
+                </div>
+            </div>
+        </div>
 
-        <li>If you are checking the size of an old hurley, the player should be able to hold the hurley at the top and the hurley should be just touching the ground.</li>
+       <p>NOTE: If you are checking the size of an old hurley, the player should be able to hold the hurley at the top and the hurley should be just touching the ground.</p>
        <br>TOP TIP: If a player is between sizes it is still better to have the hurley too small rather than too big.
     </ol>
 
