--- a/home/templates/home/how_to_measure.html
+++ b/home/templates/home/how_to_measure.html
@@ -17,7 +17,7 @@
         <!-- Text Column -->
         <div class="col-md-6">
             <p>
-                Choosing the correct size hurley will increase a player’s success at mastering the skills of the game. A shorter, lighter hurley is especially recommended for children and those new to the game. Choosing the right size hurley and helmet is essential for safety and performance. Follow these steps to measure correctly:
+                Choosing the correct size hurley will increase a player’s success at mastering the skills of the game.</p> <p>A shorter, lighter hurley is especially recommended for children and those new to the game.</p>Choosing the right size hurley and helmet is essential for safety and performance.</p> <p>Follow these steps to measure correctly:</p>
             </p>
         </div>
     </div>
@@ -26,26 +26,26 @@
  <div class="styled-hr"></div>
 
 
-    <h2>- How to Measure for a Hurley -</h2>
+    <h2>How to Measure for a Hurley</h2>
     <ol>
         <li>Wear your shoes or boots</li>
         <li>Player stands nice and relaxed with their hands down by their sides.</li>
-        <li>Measure using a peice of string or tape in the distance from the ground to their wrist.</li>
+        <li>Measure using a piece of string or tape the distance from the ground to their wrist.</li>
         <li>This measurement in inches is the correct size hurley to choose. If you only have a centimetre measure use our handy calculator below:</li>
         <div class="calculator mt-5">
-            <h3 class="text-center">Centimeters to Inches Calculator</h3>
-            <p class="text-center">Enter your measurement in centimeters to convert it to inches:</p>
+            <h3 class="text-center">Centimetres to Inches Calculator</h3>
+            <p class="text-center">Enter your measurement in centimetres to convert it to inches:</p>
             <div class="row justify-content-center">
                 <div class="col-md-6">
                     <form id="cm-to-inches-form" class="text-center">
-                        <input type="number" id="cm-input" class="form-control mb-3" placeholder="Enter centimeters" required>
+                        <input type="number" id="cm-input" class="form-control mb-3" placeholder="Enter centimetres" required>
                         <button type="button" id="convert-btn" class="btn btn-primary">Convert</button>
                     </form>
                     <p id="result" class="mt-3 text-center"></p>
                 </div>
             </div>
         </div>
-
+        <br>
        <p>NOTE: If you are checking the size of an old hurley, the player should be able to hold the hurley at the top and the hurley should be just touching the ground.</p>
        <br>TOP TIP: If a player is between sizes it is still better to have the hurley too small rather than too big.
     </ol>
@@ -53,10 +53,18 @@
      <!-- Add a horizontal line here -->
      <div class="styled-hr"></div>
 
-    <h2>- How to Measure for a Helmet -</h2>
+    <h2>How to Measure for a Helmet</h2>
 
     <!-- Responsive Image and Text Section -->
     <div class="row align-items-center my-4">
+        <p>Hurling and Camogie are fast-paced games which require helmets to be worn by all players for protection.</p><p>Wearing a properly fitted hurling helmet is essential for your safety on the pitch.</p><p>The GAA reminds all players at all levels in all
+            Hurling Games and Hurling Practice Sessions it is
+            mandatory, and the responsibility of each
+            individual player to wear a helmet with a facial
+            guard that meets the standards set out in
+            IS:355 as
+            determined by the National Safety Authority of
+            Ireland (NSAI).</p>
         <!-- Image Column -->
         <div class="col-md-6 text-center">
             <img src="{% static 'images/helmet-measurement.webp' %}" 
@@ -71,7 +79,7 @@
         <li> Ensure the measuring tape is flat the full way around, it should sit snug but not too tight.</li>
         <li> Take note of the measurements and find the correct size of hurling helmet using the size guide.</li>
         <br>
-        If you have any questions, feel free to <a href="/contact-us/">contact us
+        If you have any questions, feel free to <a href="/contact-us/">Contact Us
 
     </ol>
     </p>
