Add faq.html, link up url and views in home file, add readme credit for FAQ, relates to #13

--- a/home/templates/home/faq.html
+++ b/home/templates/home/faq.html
@@ -2,3 +2,55 @@
 {% block content %}
 <div class="container mt-5">
     <h1 class="text-center">Frequently Asked Questions</h1>
+    <p>If you can't find an answer that your're looking for, feel free to drop us a line</p>
+    <div class="faq-section mt-4">
+        <div class="accordion" id="faqAccordian">
+            <!-- Question 1 -->
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h3 class="mb-0">
+                        <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            How do I measure for the correct hurley size?
+                        </button>
+                    </h3>
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#faqAccordion">
+                    <div class="card-body">
+                        Go to our dedicated <a href="/how-to-measure/">measurement page</a> for detailed instructions.
+                    </div>
+                </div>
+            </div>
+
+            <!-- Question 2 -->
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h3 class="mb-0">
+                        <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            How do I measure for the correct hurley size?
+                        </button>
+                    </h3>
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#faqAccordion">
+                    <div class="card-body">
+                        Go to our dedicated <a href="/how-to-measure/">measurement page</a> for detailed instructions.
+                    </div>
+                </div>
+            </div>
+
+            <!-- Question 3 -->
+            <div class="card">
+                <div class="card-header" id="headingOne">
+                    <h3 class="mb-0">
+                        <button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                            How do I measure for the correct hurley size?
+                        </button>
+                    </h3>
+                </div>
+                <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#faqAccordion">
+                    <div class="card-body">
+                        Go to our dedicated <a href="/how-to-measure/">measurement page</a> for detailed instructions.
+                    </div>
+                </div>
+            </div>
+    </div>
+{% endblock %}
