Add credits to readme

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -142,7 +142,7 @@ body {
 }
 
 .faq-section .card-body {
-    background-color: #fff; /
+    background-color: #fff; 
     color: #333;
     padding: 15px;
     border-radius: 5px; 
