--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -1,12 +1,19 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Product List</h1>
-<ul>
+<h1>Products</h1>
+<div class="row">
     {% for product in products %}
-    <li>
-        <a href="{% url 'product_detail' product.id %}">{{ product.name }}</a> - €{{ product.price }}
-    </li>
+        <div class="col-md-4 mb-4">
+            <div class="card">
+                <img src="{{ product.image.url }}" class="card-img-top" alt="{{ product.name }}">
+                <div class="card-body">
+                    <h5 class="card-title">{{ product.name }}</h5>
+                    <p class="card-text">Price: €{{ product.price }}</p>
+                    <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">View Details</a>
+                </div>
+            </div>
+        </div>
     {% endfor %}
-</ul>
+</div>
 {% endblock %}
