Fix templatesyntaxerro, expand hurley_detali choices and link hurleydetail to hurley shop, relates to #2

--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -6,22 +6,24 @@
     <h1 class="text-center">Hurleys Shop</h1>
     <div class="row text-center mt-4">
         <!-- Ash Hurleys -->
+        {% for hurley in hurleys %}
         <div class="col-md-4 mb-4">
-            <a href="{% url 'product_list' %}?category=ash-hurleys">
+            <a href="{% url 'hurley_detail' hurley.product.id %}">
                 <img src="{% static 'images/ash_hurley.png' %}" alt="Ash Hurleys" class="img-fluid rounded">
-                <h3 class="mt-3">Ash Hurleys</h3>
+                <h3 class="mt-3">{{ hurley.product.name }}</h3>
             </a>
         </div>
+        {% endfor %}
         <!-- Bambú Hurleys -->
         <div class="col-md-4 mb-4">
-            <a href="{% url 'product_list' %}?category=ash-hurleys">
+            <a href="{% url 'product_list' %}?category=bambu_hurleys">
                 <img src="{% static 'images/bambu_hurley.png' %}" alt="Bambú Hurleys" class="img-fluid rounded">
                 <h3 class="mt-3">Bambú Hurleys</h3>
             </a>
         </div>
         <!-- Goalie Hurleys -->
         <div class="col-md-4 mb-4">
-            <a href="{% url 'product_list' %}?category=ash-hurleys">
+            <a href="{% url 'product_list' %}?category=goalie_hurleys">
                 <img src="{% static 'images/goalie_hurleys.png' %}" alt="Goalie Hurleys" class="img-fluid rounded">
                 <h3 class="mt-3">Goalie Hurleys</h3>
             </a>
