--- a/products/templates/products/hurleys_shop.html
+++ b/products/templates/products/hurleys_shop.html
@@ -18,7 +18,7 @@
         {% for hurley in hurleys %}
         <div class="col-md-4 mb-4">
             <a href="{% url 'hurley_detail' hurley.product.id %}">
-                <img src="{{ hurley.product.image.url }}" alt="{{ hurley.product.name }}" class="img-fluid rounded">
+                <img src="{% if hurley.product.image %}{{ hurley.product.image.url }}{% else %}{% static 'images/default-product.jpg' %}{% endif %}" alt="{{ hurley.product.name }}" class="img-fluid rounded">
                 <h3 class="mt-3">{{ hurley.product.name }}</h3>
             </a>
             <p>Manufacturer: {{ hurley.manufacturer }}</p>
