--- a/products/templates/products/hurley_detail.html
+++ b/products/templates/products/hurley_detail.html
@@ -6,6 +6,7 @@
     <div class="row">
         <div class="col-md-6">
             <img src="{{ hurley.product.image.url }}" alt="{{ hurley.product.name }}" class="img-fluid">
+            <p id="manufacturer-description" class="mt-3"></p> 
         </div>
         <div class="col-md-6">
             <p><strong>Price:</strong> €{{ hurley.product.price }}</p>
@@ -53,4 +54,27 @@
         </div>
     </div>
 </div>
+
+<script>
+    // Get references to the manufacturer dropdown and description placeholder
+    const manufacturerDropdown = document.getElementById('manufacturer');
+    const manufacturerDescription = document.getElementById('manufacturer-description');
+
+    // Create a mapping of manufacturer IDs to their descriptions
+    const manufacturerDescriptions = {
+        {% for manufacturer in manufacturers %}
+            "{{ manufacturer.id|escapejs }}": "{{ manufacturer.description|escapejs }}",
+        {% endfor %}
+    };
+
+    // Add an event listener to update the description when the manufacturer changes
+    manufacturerDropdown.addEventListener('change', function () {
+        const selectedManufacturerId = this.value;
+        const description = manufacturerDescriptions[selectedManufacturerId] || '';
+        manufacturerDescription.textContent = description; // Update the description
+    });
+
+    // Trigger the event listener on page load to show the default description
+    manufacturerDropdown.dispatchEvent(new Event('change'));
+</script>
 {% endblock %}
