--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -67,6 +67,9 @@
                     <label for="quantity">Quantity:</label>
                     <input type="number" id="quantity" name="quantity" value="1" min="1" class="form-control mb-3">
                 </div>
+            <form method="POST" action="{% url 'add_to_bag' product.id %}">
+                {% csrf_token %}
+                <!-- Other form fields -->
                 <button type="submit" class="btn btn-primary">Add to Bag</button>
             </form>
         </div>
