--- a/products/templates/products/accessories_shop.html
+++ b/products/templates/products/accessories_shop.html
@@ -6,24 +6,32 @@
     <h1 class="text-center">Accessories</h1>
     <div class="row text-center mt-4">
         <!-- Sliotars -->
+        {% for sliotar in sliotars %}
         <div class="col-md-4 mb-4">
-            <a href="{% url 'product_list' %}?category=sliotars">
+            <a href="{% url 'sliotar_detail' sliotar.product.id %}">
                 <img src="{% static 'images/Sliotars.png' %}" alt="Sliotars" class="img-fluid rounded">
-                <h3 class="mt-3">Sliotars</h3>
+                <h3 class="mt-3">{{ sliotar.product.name }}</h3>
             </a>
         </div>
+        {% endfor %}
         <!-- Helmets -->
+        {% for helmet in helmets %}
         <div class="col-md-4 mb-4">
-            <a href="{% url 'product_list' %}?category=helmets">
+            <a href="{% url 'helmet_detail' helmet.product.id %}">
                 <img src="{% static 'images/helmets.png' %}" alt="Helmets" class="img-fluid rounded">
-                <h3 class="mt-3">Helmets</h3>
+                <h3 class="mt-3">{{ helmet.product.name }}</h3>
             </a>
         </div>
+        {% endfor %}
         <!-- Grips -->
+        {% for grip in grips %}
         <div class="col-md-4 mb-4">
-            <a href="{% url 'product_list' %}?category=grips">
+            <a href="{% url 'grip_detail' grip.product.id %}">
                 <img src="{% static 'images/grips.png' %}" alt="Grips" class="img-fluid rounded">
-                <h3 class="mt-3">Grips</h3>
+                <h3 class="mt-3">{{ grip.product.name }}</h3>
             </a>
         </div>
+        {% endfor %}
+    </div>
+</div>
 {% endblock %}
