--- a/products/templates/products/product_list.html
+++ b/products/templates/products/product_list.html
@@ -10,8 +10,23 @@
                 <img src="{% if product.image %}{{ product.image.url }}{% else %}{% static 'images/default-product.jpg' %}{% endif %}" class="card-img-top" alt="{{ product.name }}">
                 <div class="card-body">
                     <h5 class="card-title">{{ product.name }}</h5>
+                    <p>Product Type: 
+                        {% if product.hurley %}Hurley{% endif %}
+                        {% if product.helmet %}Helmet{% endif %}
+                        {% if product.grip %}Grip{% endif %}
+                        {% if product.sliotar %}Sliotar{% endif %}
+                    </p>
                     <p class="card-text">Price: €{{ product.price }}</p>
-                    <a href="{% url 'product_detail' product.id %}" class="btn btn-primary">View Details</a>
+                    <a href="{% if product.hurley %}
+                                {% url 'hurley_detail' product.hurley.product.id %}
+                            {% elif product.helmet %}
+                                {% url 'helmet_detail' product.helmet.product.id %}
+                            {% elif product.grip %}
+                                {% url 'grip_detail' product.grip.product.id %}
+                            {% elif product.sliotar %}
+                                {% url 'sliotar_detail' product.sliotar.product.id %}
+                            {% endif %}" 
+                    class="btn btn-primary">View Details</a>
                 </div>
             </div>
         </div>
